--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ button{background:#2196f3;color:white;cursor:pointer}
 /* ===== CLASSEMENT ===== */
 #leaderboard-screen{
     background:linear-gradient(180deg,#0f2027,#203a43,#2c5364);
+    flex-direction:column;
+    align-items:center;
     padding-top:30px;
     gap:15px;
 }
@@ -46,7 +48,7 @@ button{background:#2196f3;color:white;cursor:pointer}
 .empty{border:2px dashed rgba(255,255,255,.3);opacity:.5}
 
 /* ===== JEU ===== */
-#game-screen{background:black;overflow:hidden;position:relative;width:100%;height:100%}
+#game-screen{background:black;overflow:hidden}
 .star{position:absolute;width:2px;height:2px;background:white;opacity:.8}
 
 /* Fusée stylée */
@@ -139,7 +141,6 @@ button{background:#2196f3;color:white;cursor:pointer}
     <div id="gameover">
         <h1>💥 VOUS AVEZ PERDU 💥</h1>
         <div id="finalScore"></div>
-        <div id="bestGameScore"></div>
         <button onclick="goHome()">Retour</button>
     </div>
 </div>
@@ -154,12 +155,10 @@ const bestTxt=document.getElementById("best")
 const list=document.getElementById("leaderboard-list")
 const gameover=document.getElementById("gameover")
 const finalScore=document.getElementById("finalScore")
-const bestGameScore=document.getElementById("bestGameScore")
 const pseudoInput=document.getElementById("pseudo")
 
 let x=innerWidth/2,score=0,speed=4,spawnDelay=800,gameOver=false,player=""
-let speedMultiplier=1,pointMultiplier=1,activatedThresholds=new Set()
-let scoreInterval=null
+let baseSpeed=4, speedMultiplier=1, pointMultiplier=1, activatedThresholds = new Set(), scoreInterval
 
 function switchScreen(s){
     [home,game,leader].forEach(e=>e.classList.remove("active"))
@@ -189,53 +188,59 @@ function spawnStars(){
 
 /* JOUER */
 function play(){
-    player=pseudoInput.value||"Anonyme"
-    score=0;speed=4;spawnDelay=800;gameOver=false
-    speedMultiplier=1;pointMultiplier=1;activatedThresholds=new Set()
-    scoreTxt.textContent="Score : 0"
-    gameover.style.display="none"
-    document.querySelectorAll(".rock").forEach(r=>r.remove())
-    spawnStars()
-    switchScreen(game)
-    loopScore()
-    spawnRock()
+    player = pseudoInput.value || "Anonyme";
+    score = 0;
+    baseSpeed = 4;
+    speed = baseSpeed;
+    spawnDelay = 800;
+    gameOver = false;
+    speedMultiplier = 1;
+    pointMultiplier = 1;
+    activatedThresholds = new Set();
+    scoreTxt.textContent = "Score : 0";
+    gameover.style.display = "none";
+    document.querySelectorAll(".rock").forEach(r=>r.remove());
+    spawnStars();
+    switchScreen(game);
+    loopScore();
+    spawnRock();
 }
 
 /* SCORE EXPONENTIEL ET DIFFICULTÉ */
 function loopScore(){
-    clearInterval(scoreInterval)
-    scoreInterval=setInterval(()=>{
-        if(gameOver)return
-        score++
-        scoreTxt.textContent="Score : "+score
-        updateDifficulty()
-    },200/pointMultiplier)
-}
+    clearInterval(scoreInterval);
+    scoreInterval = setInterval(()=>{
+        if(gameOver) return;
 
-function updateDifficulty(){
-    let thresholds=[100,250,500,1000]
-    // paliers infinis tous les 500 après 500
-    if(score>=1500){
-        let extra=Math.floor((score-1500)/500)
-        for(let i=0;i<=extra;i++) thresholds.push(1500+i*500)
-    }
-    thresholds.forEach(t=>{
-        if(score>=t && !activatedThresholds.has(t)){
-            activatedThresholds.add(t)
-            speedMultiplier*=2
-            pointMultiplier*=2
-            speed=4*speedMultiplier
-            spawnDelay=Math.max(100,800/speedMultiplier)
-            clearInterval(scoreInterval)
-            loopScore()
+        // Score + multiplicateur
+        score += pointMultiplier;
+        scoreTxt.textContent = "Score : " + score;
+
+        // Seuils
+        let thresholds = [100, 250, 500, 1000];
+        if(score >= 1500){
+            let extra = Math.floor((score - 1500) / 500);
+            for(let i = 0; i <= extra; i++) thresholds.push(1500 + i*500);
         }
-    })
+
+        thresholds.forEach(t=>{
+            if(score >= t && !activatedThresholds.has(t)){
+                activatedThresholds.add(t);
+                speedMultiplier *= 2;
+                pointMultiplier *= 2;
+                speed = baseSpeed * speedMultiplier;
+                spawnDelay = Math.max(100, 800 / speedMultiplier);
+            }
+        });
+
+    }, 250); // toutes les 0.25 sec
 }
 
 /* CLASSEMENT */
 function showLeaderboard(){
     list.innerHTML=""
     let data=JSON.parse(localStorage.getItem("leaderboard")||"[]")
+
     for(let i=0;i<10;i++){
         let d=document.createElement("div")
         if(data[i]){
@@ -285,7 +290,6 @@ function spawnRock(){
 function endGame(){
     gameOver=true
     finalScore.textContent="Score : "+score
-    bestGameScore.textContent="Meilleur score : "+(localStorage.getItem("bestScore")||0)
     gameover.style.display="flex"
 
     let best=localStorage.getItem("bestScore")||0
