--- a/index.html
+++ b/index.html
@@ -290,8 +290,9 @@ function showLeaderboard(){
             }
             list.appendChild(d)
         }
+        // SWITCH SCREEN après récupération Firebase
+        switchScreen(leader)
     })
-    switchScreen(leader)
 }
 
 /* CONTROLES */
